Add deployment configurations

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "effisphere",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "360° Employee Monitoring Platform with React, TypeScript & Supabase",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
